Создано с помощью Colaboratory

--- a/speech_type.ipynb
+++ b/speech_type.ipynb
@@ -1,20 +1,76 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
+      "cell_type": "code",
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Pihhot/SpeechType_Advanced/blob/main/speech_type.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "from pathlib import Path"
+      ],
+      "metadata": {
+        "id": "YsMfWG35BMLa"
+      },
+      "id": "YsMfWG35BMLa",
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dowload data from github"
+      ],
+      "metadata": {
+        "id": "sfUimBapBDkw"
+      },
+      "id": "sfUimBapBDkw"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://raw.githubusercontent.com/Pihhot/SpeechType_Advanced/main/data.json\n",
+        "data_path = Path('/content/data.json')"
+      ],
+      "metadata": {
+        "id": "hpXIPecm9_SR",
+        "outputId": "684e7151-bdd8-42fe-94ff-941b3656af66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "hpXIPecm9_SR",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/data.json\n"
+          ]
+        }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preparing Data"
+      ],
+      "metadata": {
+        "id": "tJgI57Q2B8dR"
+      },
+      "id": "tJgI57Q2B8dR"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SMtNipGRB8Ct"
+      },
+      "id": "SMtNipGRB8Ct",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "language_info": {
       "name": "python"
