Создано с помощью Colaboratory

--- a/speech_type.ipynb
+++ b/speech_type.ipynb
@@ -126,6 +126,66 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Inputs for NN"
+      ],
+      "metadata": {
+        "id": "Rgia51eqRHVN"
+      },
+      "id": "Rgia51eqRHVN"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.preprocessing.text import Tokenizer, text_to_word_sequence\n",
+        "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+      ],
+      "metadata": {
+        "id": "pEWPIMVtRKcc"
+      },
+      "id": "pEWPIMVtRKcc",
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tokenizer"
+      ],
+      "metadata": {
+        "id": "oCbo91iEQomH"
+      },
+      "id": "oCbo91iEQomH"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "maxWordsCount = 5000\n",
+        "tokenizer = Tokenizer(num_words=maxWordsCount, filters='!–\"—#$%&amp;()*+,-./:;<=>?@[\\\\]^_`{|}~\\t\\n\\r«»', lower=True, split=' ', char_level=False)\n",
+        "tokenizer.fit_on_texts(train_sentences.copy()+test_sentences.copy())\n",
+        "print(list(tokenizer.word_counts.items())[:10])"
+      ],
+      "metadata": {
+        "id": "th_vFP5vQqJ2",
+        "outputId": "3b186e1b-d718-482a-e585-1834076bea56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "th_vFP5vQqJ2",
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('ok', 531), ('y', 17800), ('uh', 29156), ('d', 12465), ('defending', 11), ('your', 2760), ('life', 573), ('but', 11834), ('no', 1776), ('gee', 92)]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Preparing Data"
       ],
       "metadata": {
@@ -137,7 +197,8 @@
       "cell_type": "code",
       "source": [
         "x_train, y_train = train_sentences.copy(), train_classes.copy()\n",
-        "x_test, y_test = test_sentences.copy(), test_classes.copy()"
+        "x_test, y_test = test_sentences.copy(), test_classes.copy()\n",
+        "\n"
       ],
       "metadata": {
         "id": "tXgzU29cPP_w"
