Создано с помощью Colaboratory

--- a/speech_type.ipynb
+++ b/speech_type.ipynb
@@ -136,14 +136,21 @@
     {
       "cell_type": "code",
       "source": [
-        "from tensorflow.keras.preprocessing.text import Tokenizer, text_to_word_sequence\n",
-        "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+        "from keras.preprocessing.text import Tokenizer, text_to_word_sequence\n",
+        "from keras.utils import to_categorical, pad_sequences\n",
+        "\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "import numpy as np\n",
+        "\n",
+        "from keras.layers import Dense, LSTM, Input, Dropout, Embedding\n",
+        "from keras.models import Sequential\n",
+        "from keras.optimizers import Adam"
       ],
       "metadata": {
         "id": "pEWPIMVtRKcc"
       },
       "id": "pEWPIMVtRKcc",
-      "execution_count": 49,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -165,11 +172,11 @@
         "print(list(tokenizer.word_counts.items())[:10])"
       ],
       "metadata": {
-        "id": "th_vFP5vQqJ2",
-        "outputId": "3b186e1b-d718-482a-e585-1834076bea56",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "th_vFP5vQqJ2",
+        "outputId": "3b186e1b-d718-482a-e585-1834076bea56"
       },
       "id": "th_vFP5vQqJ2",
       "execution_count": 52,
@@ -198,14 +205,149 @@
       "source": [
         "x_train, y_train = train_sentences.copy(), train_classes.copy()\n",
         "x_test, y_test = test_sentences.copy(), test_classes.copy()\n",
+        "\n",
+        "# Prepare text information\n",
+        "max_text_len = 10\n",
+        "\n",
+        "x_train, x_test = tokenizer.texts_to_sequences(x_train), tokenizer.texts_to_sequences(x_test)\n",
+        "x_train_pad, x_test_pad = pad_sequences(x_train, maxlen=max_text_len), pad_sequences(x_test, maxlen=max_text_len)\n",
+        "\n",
+        "# Prepare classes\n",
+        "y_train, y_test = np.array(y_train), np.array(y_test)\n",
+        "\n",
+        "l_encoder = LabelEncoder()\n",
+        "y_train, y_test = l_encoder.fit_transform(y_train), l_encoder.fit_transform(y_test)\n",
+        "y_train, y_test = to_categorical(y_train), to_categorical(y_test)\n",
+        "\n",
+        "#print(x_train_pad[:5])\n",
+        "#print(y_train)\n",
         "\n"
       ],
       "metadata": {
-        "id": "tXgzU29cPP_w"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tXgzU29cPP_w",
+        "outputId": "84d67a67-8290-49d1-e415-cda89dac088c"
       },
       "id": "tXgzU29cPP_w",
-      "execution_count": 48,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[   0    0    0    0    0    0    0  293   21    9]\n",
+            " [   0    0    0    0    0    0   27 3285   91  279]\n",
+            " [   0    0    0    0    0    0    0    0   30  124]\n",
+            " [   0    0    0    0    0    0    0    0    0  921]\n",
+            " [   0    0    0    0    0    0    0    0  207  152]]\n",
+            "[[0. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 0.]\n",
+            " ...\n",
+            " [0. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 0.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create Model"
+      ],
+      "metadata": {
+        "id": "sMFOKsarXBX-"
+      },
+      "id": "sMFOKsarXBX-"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = Sequential()\n",
+        "model.add(Embedding(maxWordsCount, 128, input_length = max_text_len))\n",
+        "model.add(LSTM(128, return_sequences=True))\n",
+        "model.add(LSTM(64))\n",
+        "model.add(Dense(43, activation='softmax'))\n",
+        "model.summary()\n",
+        "\n",
+        "model.compile(loss='categorical_crossentropy', metrics=['accuracy'], optimizer=Adam(0.0001))"
+      ],
+      "metadata": {
+        "id": "A-aCquKAXDDm",
+        "outputId": "5dede307-6730-470e-cce6-886adc7f929f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "A-aCquKAXDDm",
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_1\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " embedding_1 (Embedding)     (None, 10, 128)           640000    \n",
+            "                                                                 \n",
+            " lstm_2 (LSTM)               (None, 10, 128)           131584    \n",
+            "                                                                 \n",
+            " lstm_3 (LSTM)               (None, 64)                49408     \n",
+            "                                                                 \n",
+            " dense_1 (Dense)             (None, 43)                2795      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 823,787\n",
+            "Trainable params: 823,787\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fit model"
+      ],
+      "metadata": {
+        "id": "-WhhjIYyXbbE"
+      },
+      "id": "-WhhjIYyXbbE"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history = model.fit(x_train_pad, y_train, batch_size=500, epochs=50)"
+      ],
+      "metadata": {
+        "id": "r6qBT_QcXdJk",
+        "outputId": "0512689f-7980-4ff3-caef-cdd7626784df",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 172
+        }
+      },
+      "id": "r6qBT_QcXdJk",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-0eeae6ade9b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhistory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train_pad\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -219,7 +361,9 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "nbformat": 4,
   "nbformat_minor": 5
