Создано с помощью Colaboratory

--- a/speech_type.ipynb
+++ b/speech_type.ipynb
@@ -11,141 +11,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "from pathlib import Path\n",
-        "import json\n",
-        "import re"
-      ],
-      "metadata": {
-        "id": "YsMfWG35BMLa"
-      },
-      "id": "YsMfWG35BMLa",
-      "execution_count": 47,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Dowload data from github"
-      ],
-      "metadata": {
-        "id": "sfUimBapBDkw"
-      },
-      "id": "sfUimBapBDkw"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!wget https://raw.githubusercontent.com/Pihhot/SpeechType_Advanced/main/data.json\n",
-        "\n",
-        "data_path = Path.cwd() / 'data.json'\n",
-        "\n",
-        "with open(data_path) as f:\n",
-        "    data = json.load(f)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hpXIPecm9_SR",
-        "outputId": "effd77f2-96d3-4aa0-9cec-cc901cb1bae4"
-      },
-      "id": "hpXIPecm9_SR",
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2022-11-24 18:04:27--  https://raw.githubusercontent.com/Pihhot/SpeechType_Advanced/main/data.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 9211573 (8.8M) [text/plain]\n",
-            "Saving to: ‘data.json.1’\n",
-            "\n",
-            "data.json.1         100%[===================>]   8.78M  --.-KB/s    in 0.09s   \n",
-            "\n",
-            "2022-11-24 18:04:28 (100 MB/s) - ‘data.json.1’ saved [9211573/9211573]\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Cleaning Data"
-      ],
-      "metadata": {
-        "id": "tJgI57Q2B8dR"
-      },
-      "id": "tJgI57Q2B8dR"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def clear_sentence(text: str) -> str:\n",
-        "    # Remove punctuations and numbers\n",
-        "    text = re.sub('[^a-zA-Z]', ' ', text)\n",
-        "    # Single character removal\n",
-        "    text = re.sub(r\"\\s+[a-zA-Z]\\s+\", ' ', text)\n",
-        "    # Removing multiple spaces\n",
-        "    text = re.sub(r'\\s+', ' ', text)\n",
-        "    return text.lower()\n",
-        "\n",
-        "data_copy = data.copy()\n",
-        "train_sentences, train_classes = [], []\n",
-        "test_sentences, test_classes = [], []\n",
-        "skipped_s = 0\n",
-        "index = 0\n",
-        "for k in data_copy.keys():\n",
-        "  for sentence in data_copy[k]:\n",
-        "    index += 1\n",
-        "    # Clean sentence\n",
-        "    sentence = clear_sentence(sentence)\n",
-        "    if len(sentence):\n",
-        "      # Add every fifth element to test\n",
-        "      if index % 7 == 0:\n",
-        "        test_sentences.append(sentence)\n",
-        "        test_classes.append(k)\n",
-        "      else:\n",
-        "        train_sentences.append(sentence)\n",
-        "        train_classes.append(k)\n",
-        "    else:\n",
-        "      skipped_s += 1\n",
-        "\n",
-        "print(f'Count of train_sentences: {len(train_sentences):<10} Count of test_sentences: {len(test_sentences)}')\n",
-        "print(f'Count of train_classes:   {len(train_classes):<10} Count of test_classes:   {len(test_classes):<10}')\n",
-        "print(f'Count of classes in train: {len(set(train_classes)):<9} Count of classes in test: {len(set(test_classes))}')\n",
-        "print(f'Skipped: {skipped_s}')    \n",
-        "print(test_sentences[:10])\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SMtNipGRB8Ct",
-        "outputId": "6d482002-7314-45fb-d4bb-9217dd11d8fa"
-      },
-      "id": "SMtNipGRB8Ct",
-      "execution_count": 63,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Count of train_sentences: 119950     Count of test_sentences: 19993\n",
-            "Count of train_classes:   119950     Count of test_classes:   19993     \n",
-            "Count of classes in train: 43        Count of classes in test: 43\n",
-            "Skipped: 39\n",
-            "['cafeteria ', 'you know something ', 'but anyway ', 'piece for uh ', 'whatever ', 'no ', ' yeah ', 'what was the spoof on top gun ', 'all right ellen ', 'but oh boy ']\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Inputs for NN"
@@ -172,7 +37,7 @@
         "id": "pEWPIMVtRKcc"
       },
       "id": "pEWPIMVtRKcc",
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +66,7 @@
         "outputId": "da38f6fb-4728-4709-dfde-11cad7a83e48"
       },
       "id": "th_vFP5vQqJ2",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +114,7 @@
         "id": "tXgzU29cPP_w"
       },
       "id": "tXgzU29cPP_w",
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -287,7 +152,7 @@
         "id": "A-aCquKAXDDm"
       },
       "id": "A-aCquKAXDDm",
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +179,7 @@
         "outputId": "6ba8b69b-5a77-4a23-ee0f-4ae62a73ba52"
       },
       "id": "r6qBT_QcXdJk",
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,48 +214,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "import spacy\n",
-        "!pip install contractions\n",
-        "import contractions"
-      ],
-      "metadata": {
-        "id": "DF7gVi0C4j3e",
-        "outputId": "e9290672-e8b6-4b19-84d6-6ea94ff472b7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "DF7gVi0C4j3e",
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting contractions\n",
-            "  Downloading contractions-0.1.73-py2.py3-none-any.whl (8.7 kB)\n",
-            "Collecting textsearch>=0.0.21\n",
-            "  Downloading textsearch-0.0.24-py2.py3-none-any.whl (7.6 kB)\n",
-            "Collecting anyascii\n",
-            "  Downloading anyascii-0.3.1-py3-none-any.whl (287 kB)\n",
-            "\u001b[K     |████████████████████████████████| 287 kB 5.2 MB/s \n",
-            "\u001b[?25hCollecting pyahocorasick\n",
-            "  Downloading pyahocorasick-1.4.4-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (106 kB)\n",
-            "\u001b[K     |████████████████████████████████| 106 kB 66.1 MB/s \n",
-            "\u001b[?25hInstalling collected packages: pyahocorasick, anyascii, textsearch, contractions\n",
-            "Successfully installed anyascii-0.3.1 contractions-0.1.73 pyahocorasick-1.4.4 textsearch-0.0.24\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "Preprocess RAW data"
+        "\n",
+        "*   Download RAW data from git\n",
+        "*   Process RAW data\n",
+        "*   Split on train & test\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "ytpJD30IB3q4"
@@ -400,6 +232,22 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
+        "import spacy\n",
+        "!pip install contractions\n",
+        "import contractions\n",
+        "from pathlib import Path\n",
+        "import json\n",
+        "import re\n",
+        "#####################################################################################\n",
+        "!wget https://raw.githubusercontent.com/Pihhot/SpeechType_Advanced/main/data.json\n",
+        "\n",
+        "data_path = Path.cwd() / 'data.json'\n",
+        "\n",
+        "with open(data_path) as f:\n",
+        "    data = json.load(f)\n",
+        "######################################################################################    \n",
+        "\n",
         "def sent_lemmas(doc) -> str:\n",
         "    return ' '.join(t.lemma_ for t in doc)\n",
         "\n",
@@ -431,8 +279,8 @@
         "\n",
         "\n",
         "index = 0\n",
-        "for class_ in data_copy.keys():\n",
-        "  for sentence in data_copy[class_]:\n",
+        "for class_ in data.keys():\n",
+        "  for sentence in data[class_]:\n",
         "    index += 1\n",
         "    # Save original sentences\n",
         "    sentence_or = sentence\n",
@@ -474,7 +322,10 @@
         "                 'TYPE':test_class}\n",
         "\n",
         "train_df = pd.DataFrame(train_df_data)\n",
-        "test_df = pd.DataFrame(test_df_data)"
+        "test_df = pd.DataFrame(test_df_data)\n",
+        "\n",
+        "test_df.to_csv('test_data', index=False, sep=':')\n",
+        "train_df.to_csv('train_data', index=False, sep=':')"
       ],
       "metadata": {
         "id": "_XkuQeJw5EC0",
@@ -484,7 +335,7 @@
         }
       },
       "id": "_XkuQeJw5EC0",
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5501,19 +5352,6 @@
           "execution_count": 75
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "test_df.to_csv('test_data', index=False, sep=':')\n",
-        "train_df.to_csv('train_data', index=False, sep=':')"
-      ],
-      "metadata": {
-        "id": "KYQm4ljeQLuw"
-      },
-      "id": "KYQm4ljeQLuw",
-      "execution_count": 83,
-      "outputs": []
     }
   ],
   "metadata": {
